UIP-3271: Fixed issue where chart titles would overflow their containers

--- a/packages/ui-library/src/css/layout/_dashboard-cards.scss
+++ b/packages/ui-library/src/css/layout/_dashboard-cards.scss
@@ -133,6 +133,7 @@ $fullwidthBreakpoint: 950px;
 
 
     &__title {
+        @include break-word;
         font-size: 18px;
         text-transform: uppercase;
         color: $color-neutral-10;
